<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nameText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">

    <EditText
        android:id="@+id/image_url_input"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="87dp"
        android:onClick="SubmitonClick"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Savebutton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginStart="66dp"
...
