...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchingActivity">

    <Button
        android:id="@+id/MockButton"
        android:layout_width="127dp"
        android:layout_height="54dp"
        android:onClick="goToMockOnClick"
        android:text="Mock with students"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toTopOf="@+id/search_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MockButton" />

    <ToggleButton
        android:id="@+id/visibilityToggle"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:onClick="toggleOnClick"
...
