...
        android:hint="Number"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/YearDropDown"
        app:layout_constraintTop_toBottomOf="@+id/QuarterDropDown" />

    <Button
        android:id="@+id/AddClassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:onClick="addClassOnClicked"
        android:text="Add Class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassSizeDropDown" />

    <Button
        android:id="@+id/DoneButton"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="16dp"
        android:onClick="doneonClick"
        android:text="Go to Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ClassList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classScrollView" />

    <androidx.core.widget.NestedScrollView
...
