...
        <item>SS2</item>
        <item>SSS</item>
    </string-array>

    <string-array name="Class_Size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gigantic</item>
    </string-array>

...
